# Solov2-TensorRT-CPP

./: CMakeLists.txt  LICENSE  README.md  build_model.cpp  common.py  demo.cpp  main.cpp
InstanceSegment/: buffer.cpp  buffer.h  infer.cpp  infer.h  parameters.cpp  parameters.h  pipeline.cpp  pipeline.h  solo.cpp  solo.h  utils.cpp  utils.h
NotUse/: Dataloader.cpp  Dataloader.h  Frame.h  realsense.cpp  seg_test.cpp
config/: config.yaml
